--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -14,12 +14,13 @@ android {
 
     signingConfigs {
         release {
-            def Console console = System.console()
-            //noinspection GroovyAssignabilityCheck
-            storeFile file('../keystore/JiongBull.jks')
-            storePassword console != null ? console.readLine("\nKeystore password: ") : ''
-            keyAlias 'android'
-            keyPassword console != null ? console.readLine("\nKey password: ") : ''
+//            在这里配置你的签名来测试混淆
+//            def Console console = System.console()
+//            //noinspection GroovyAssignabilityCheck
+//            storeFile file('../keystore/JiongBull.jks')
+//            storePassword console != null ? console.readLine("\nKeystore password: ") : ''
+//            keyAlias 'android'
+//            keyPassword console != null ? console.readLine("\nKey password: ") : ''
         }
     }
 
@@ -30,17 +31,21 @@ android {
             shrinkResources false
         }
         release {
-            minifyEnabled true
-            signingConfig signingConfigs.release
-            zipAlignEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
+//          测试混淆时使用注释代码
+//            minifyEnabled true
+//            signingConfig signingConfigs.release
+//            zipAlignEnabled true
+//            shrinkResources true
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             applicationVariants.all { variant ->
                 variant.outputs.each { output ->
                     def outputFile = output.outputFile
                     if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                        def fileName = "jlog_sample.apk"
+                        def fileName = "jlog_sample_v${gradle.verName}.apk"
                         output.outputFile = new File(outputFile.parent, fileName)
                     }
                 }
