--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,10 @@ android:
   - android-23
   - extra
 script:
-- "./gradlew bintrayUpload"
 - "./gradlew assembleRelease"
 before_install:
 - openssl aes-256-cbc -K $encrypted_51c724e3a7c6_key -iv $encrypted_51c724e3a7c6_iv
-  -in JiongBull.jks.enc -out keystore/JiongBull.jks -d
+  -in keystore/JiongBull.jks.enc -out keystore/JiongBull.jks -d
 deploy:
   provider: releases
   api_key:
