--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ android:
   - extra
 script:
 - "./gradlew assembleRelease"
-before_install:
-- openssl aes-256-cbc -K $encrypted_51c724e3a7c6_key -iv $encrypted_51c724e3a7c6_iv
-  -in JiongBull.jks.enc -out JiongBull.jks -d
+#before_install:
+#- openssl aes-256-cbc -K $encrypted_51c724e3a7c6_key -iv $encrypted_51c724e3a7c6_iv
+#  -in JiongBull.jks.enc -out JiongBull.jks -d
 deploy:
   provider: releases
   api_key:
