--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ android:
 script:
 - ./gradlew assembleRelease
 before_install:
-# - chmod +x gradlew
+- chmod +x gradlew
 #- openssl aes-256-cbc -K $encrypted_51c724e3a7c6_key -iv $encrypted_51c724e3a7c6_iv
 #  -in JiongBull.jks.enc -out JiongBull.jks -d
 deploy:
