--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.jiongbull.sample">
+          xmlns:tools="http://schemas.android.com/tools" package="com.jiongbull.jlog.sample">
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
-                 android:name="com.jiongbull.sample.RootApp"
+                 android:name="com.jiongbull.jlog.sample.RootApp"
                  android:theme="@style/AppTheme.Blue"
-                 android:icon="@mipmap/ic_launcher">
+                 android:icon="@mipmap/ic_launcher"
+                 tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-        <activity android:name="com.jiongbull.sample.MainActivity">
+        <activity android:name="com.jiongbull.jlog.sample.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
