--- a/jlog/build.gradle
+++ b/jlog/build.gradle
@@ -22,6 +22,7 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+    compile "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
 }
 
 install {
@@ -74,8 +75,8 @@ artifacts {
 }
 
 bintray {
-    user = project.hasProperty('BINTRAY_USER') ? KEYSTORE_PASS : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('BINTRAY_APIKEY') ? KEYSTORE_PASS : System.getenv('BINTRAY_APIKEY')
+    user = project.hasProperty('BINTRAY_USER') ? BINTRAY_USER : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('BINTRAY_APIKEY') ? BINTRAY_APIKEY : System.getenv('BINTRAY_APIKEY')
     configurations = rootProject.ext.BINTRAY_CONFIGURATIONS
     pkg {
         repo = rootProject.ext.BINTRAY_REPO
