--- a/jlog/build.gradle
+++ b/jlog/build.gradle
@@ -23,6 +23,7 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
+    compile "org.jooq:joor:${rootProject.ext.joorVersion}"
 }
 
 install {
