--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'build_system/build.gradle'
+
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
 }
@@ -13,39 +15,14 @@ allprojects {
     repositories {
         jcenter()
     }
+
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    compileSdkVersion = 24 // SDK编译版本
-    buildToolsVersion = '24.0.3'
-    minSdkVersion = 16
-    targetSdkVersion = 24
-    versionCode = 7
-    versionName = '1.0.7'
-    supportVersion = '24.2.1'
-
-    GROUP = 'com.jiongbull'
-    VERSION_NAME = versionName
-    POM_PACKAGING = 'aar'
-    POM_DESCRIPTION = 'Android logcat tool'
-
-    POM_URL = 'https://github.com/JiongBull/jlog'
-    POM_GIT_URL = 'https://github.com/JiongBull/jlog.git'
-
-
-    POM_LICENCE_NAME = 'The Apache Software License, Version 2.0'
-    POM_LICENCE_URL = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-
-    POM_DEVELOPER_ID = 'JiongBull'
-    POM_DEVELOPER_NAME = 'JiongBull'
-    POM_DEVELOPER_EMAIL = 'jiongbull717@gmail.com'
-
-    BINTRAY_REPO = 'maven'
-    BINTRAY_NAME = 'jlog'
-    BINTRAY_CONFIGURATIONS = ['archives']
-    BINTRAY_LICENSES = ['Apache-2.0']
 }
