--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -5,19 +5,31 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.jiongbull.jlog.sample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
+
+        lintOptions {
+            abortOnError false
+            checkReleaseBuilds false
+            quiet true
+            ignoreWarnings true
+        }
     }
 
     signingConfigs {
         release {
             storeFile file('../keystore/JiongBull.jks')
-            storePassword project.hasProperty('KEYSTORE_PASS') ? KEYSTORE_PASS : System.getenv('KEYSTORE_PASS')
-            keyAlias project.hasProperty('ALIAS_NAME') ? ALIAS_NAME : System.getenv("ALIAS_NAME")
-            keyPassword project.hasProperty('ALIAS_PASS') ? ALIAS_PASS : System.getenv("ALIAS_PASS")
+            Properties properties = new Properties()
+            properties.load(rootProject.file('local.properties').newDataInputStream())
+            def keystorePass = properties.getProperty('keystorePass')
+            def aliasName = properties.getProperty('aliasName')
+            def aliasPass = properties.getProperty('aliasPass')
+
+            storePassword keystorePass != null ? keystorePass : System.getenv('keystorePass')
+            keyAlias aliasName != null ? aliasName : System.getenv("aliasName")
+            keyPassword aliasPass != null ? aliasPass : System.getenv("aliasPass")
         }
     }
 
@@ -36,11 +48,9 @@ android {
 
             applicationVariants.all { variant ->
                 variant.outputs.each { output ->
-                    def outputFile = output.outputFile
-                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                        def fileName = "jlog_sample.apk"
-                        output.outputFile = new File(outputFile.parent, fileName)
-                    }
+                    output.outputFile = new File(
+                            output.outputFile.parent + "/${variant.buildType.name}",
+                            "jlog_sample_${variant.buildType.name}.apk".toLowerCase())
                 }
             }
         }
@@ -48,6 +58,9 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
-    compile project(':jlog')
+    def sampleModule = rootProject.ext.sampleModule
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile sampleModule.support
+    compile project(sampleModule.library)
 }
