--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 - "./gradlew assembleRelease"
 before_install:
 - openssl aes-256-cbc -K $encrypted_f484ee398990_key -iv $encrypted_f484ee398990_iv
-  -in JiongBull.jks.enc -out JiongBull.jks -d
+  -in keystore/JiongBull.jks.enc -out keystore/JiongBull.jks -d
 - chmod +x gradlew
 deploy:
   provider: releases
